--- a/index.html
+++ b/index.html
@@ -13,6 +13,29 @@
 </head>
 
 <body>
+    <header class="mynav"> 
+      <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+        <a class="navbar-brand" href="#">Weekend Funtimes</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#disp-4">Welcome</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="#my-wk1">Search APIs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#abt-section1">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#ct-section1">Contact</a>
+          </ul>
+        </div> 
+      </nav>
+    </header> 
     <script src="./assets/js/index.js"></script>
 </body>
 
