--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
           <p class="lead">This is a fantastic app</p>
           <a class="btn btn-primary btn-lg" role="button" data-toggle="modal" data-target="#exampleModal">Hire Me</a>    
         </section>
+        <section id="api-container" class="container-fluid">
+          <div class="row">
+            
+          </div>
+        </section>
     </main>
 
     <script src="./assets/js/index.js"></script>
