Added a row a divided it in 3 columns for each api

--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
         </section>
         <section id="api-container" class="container-fluid">
           <div class="row">
-            
+            <div class="col-3">
+              <h2 class="h2">OpenWeather API</h2>
+            </div>
+            <div class="col-3">
+              <h2 class="h2">Maps API</h2>
+            </div>
+            <div class="col-6">
+              <h2 class="h2">Movies API</h2>
+            </div>
           </div>
         </section>
     </main>
