updated jumbotron wordings in html file and h1 style in css

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <section class="jumbotron  text-center" >
           <h1 class="display-4" id="disp-4">Welcome to Weekend Funtimes!</h1>
           
-          <p class="lead">This is a fantastic app</p>
-          <a class="btn btn-primary btn-lg" role="button" data-toggle="modal" data-target="#exampleModal">Hire Me</a>    
+          <p class="lead">This is a fantastic app for planning all your outdoor camping activities or indoor movie themed weekend events.</p>
+          <!-- <a class="btn btn-primary btn-lg" role="button" data-toggle="modal" data-target="#exampleModal">Hire Me</a>     -->
         </section>
     </main>
 
