--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="jumbotron  text-center" >
           <h1 class="display-4" id="disp-4">Welcome to Weekend Funtimes!</h1>
           
-          <p class="lead">This is a fantastic app for planning all your outdoor camping activities or indoor movie themed weekend events.</p>
+          <p class="lead">The fabulous choice for all outdoor camping & indoor movie themed weekend events planning.</p>
           <!-- <a class="btn btn-primary btn-lg" role="button" data-toggle="modal" data-target="#exampleModal">Hire Me</a>     -->
         </section>
     </main>
