--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <li class="nav-item">
                <a class="nav-link" href="#my-wk1">Search APIs</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#abt-section1">About</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="#ct-section1">Contact</a>
           </ul>
