Added form to open weather api

--- a/index.html
+++ b/index.html
@@ -47,14 +47,20 @@
         </section>
         <section id="api-container" class="container-fluid">
           <div class="row">
-            <div class="col-3">
-              <h2 class="h2">OpenWeather API</h2>
+            <div class="col-3" id="openweather-api">
+              <h2 class="display-4 text-center">OpenWeather API</h2>
+              <form>
+                <div class="form-group">
+                  <label for="locationForm">Location</label>
+                  <input type="text" class="form-control" id="locationInput" placeholder="Ex. Manchester, UK">
+                </div>
+              </form>
             </div>
-            <div class="col-3">
-              <h2 class="h2">Maps API</h2>
+            <div class="col-3" id="maps-api">
+              <h2 class="display-4 text-center">Maps API</h2>
             </div>
-            <div class="col-6">
-              <h2 class="h2">Movies API</h2>
+            <div class="col-6" id="movies-api">
+              <h2 class="display-4 text-center">Movies API</h2>
             </div>
           </div>
         </section>
