added a form and div to the api container div

--- a/index.html
+++ b/index.html
@@ -45,7 +45,19 @@
           <p class="lead">The fabulous choice for all outdoor camping & indoor movie themed weekend events planning.</p>
           <!-- <a class="btn btn-primary btn-lg" role="button" data-toggle="modal" data-target="#exampleModal">Hire Me</a>     -->
         </section>
+
         <section id="api-container" class="container-fluid">
+          <div class="row d-flex justify-content-center">
+            <div class="col-3">
+              <form>
+                <div class="form-group">
+                  <label for="cityInput">Enter city name:</label>
+                  <input type="text" class="form-control" id="cityInput" placeholder="City name">
+                </div>
+                <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
+              </form>
+            </div>
+          </div>
           <div class="row">
             <div class="col-3">
               <h2 class="h2">OpenWeather API</h2>
@@ -58,6 +70,7 @@
             </div>
           </div>
         </section>
+        
     </main>
 
     <script src="./assets/js/index.js"></script>
