Added iframe with maps api

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </div>
             <div class="col-3" id="maps-api">
               <h2 class="display-4 text-center">Maps API</h2>
+              <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/search?q=campsite&key=AIzaSyAdjP3RyKMzcagNwl7pXD76vnw9KXjmTc0"></iframe>
             </div>
             <div class="col-6" id="movies-api">
               <h2 class="display-4 text-center">Movies API</h2>
