--- a/index.html
+++ b/index.html
@@ -77,4 +77,13 @@
     <script src="./assets/js/index.js"></script>
 </body>
 
+<footer>
+  <div class="row">
+    <div class="col-lg-12">
+      <br>
+      <p>copyright © 2022 Weekends Funtimes| All Rights Reserved. </p>
+    </div>
+  </div>
+</footer>
+
 </html>
