--- a/index.html
+++ b/index.html
@@ -2,79 +2,87 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weekend Funtimes</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weekend Funtimes</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
-    <header class="mynav"> 
-      <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-        <a class="navbar-brand" href="#">Weekend Funtimes</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#disp-4">Welcome</a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link" href="#my-wk1">Search APIs</a>
-            </li>
-            <!-- <li class="nav-item">
+  <header class="mynav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+      <a class="navbar-brand" href="#">Weekend Funtimes</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#disp-4">Welcome</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#my-wk1">Search APIs</a>
+          </li>
+          <!-- <li class="nav-item">
               <a class="nav-link" href="#abt-section1">About</a>
             </li> -->
-            <li class="nav-item">
-              <a class="nav-link" href="#ct-section1">Contact</a>
-          </ul>
-        </div> 
-      </nav>
-    </header> 
+          <li class="nav-item">
+            <a class="nav-link" href="#ct-section1">Contact</a>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-    <main>  
-        <section class="jumbotron  text-center" >
-          <h1 class="display-4" id="disp-4">Welcome to Weekend Funtimes!</h1>
-          
-          <p class="lead">The fabulous choice for all outdoor camping & indoor movie themed weekend events planning.</p>
-          <!-- <a class="btn btn-primary btn-lg" role="button" data-toggle="modal" data-target="#exampleModal">Hire Me</a>     -->
-        </section>
+  <main>
+    <section class="jumbotron  text-center">
+      <h1 class="display-4" id="disp-4">Welcome to Weekend Funtimes!</h1>
 
-        <section id="api-container" class="container-fluid">
-          <div class="row d-flex justify-content-center">
-            <div class="col-3">
-              <form>
-                <div class="form-group">
-                  <label for="cityInput">Enter city name:</label>
-                  <input type="text" class="form-control" id="cityInput" placeholder="City name">
-                </div>
-                <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
-              </form>
+      <p class="lead">The fabulous choice for all outdoor camping & indoor movie themed weekend events planning.</p>
+      <!-- <a class="btn btn-primary btn-lg" role="button" data-toggle="modal" data-target="#exampleModal">Hire Me</a>     -->
+    </section>
+    <section id="api-container" class="container-fluid">
+      <div class="row d-flex justify-content-center">
+        <div class="col-3">
+          <form>
+            <div class="form-group">
+              <label for="cityInput">Enter city name:</label>
+              <input type="text" class="form-control" id="cityInput" placeholder="City name">
+            </div>
+            <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6" id="openweather-api">
+          <h2 class="display-4 text-center">OpenWeather API</h2>
+        </div>
+        <div class="col-6" id="maps-api">
+          <h2 class="display-4 text-center">Maps API</h2>
+          <iframe id="maps-iframe" width="500" height="400" style="border:10" loading="lazy" allowfullscreen
+            src="https://www.google.com/maps/embed/v1/search?q=campsite&key=AIzaSyAdjP3RyKMzcagNwl7pXD76vnw9KXjmTc0"></iframe>
+        </div>
+        <div class="col-12" id="movies-api">
+          <h2 class="display-4 text-center">Movies API</h2>
+          <div class="btn-group">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">Movie Genres</button>
+            <div class="dropdown-menu">
+              <a href="dropdown-item" href="#">Test</a>
             </div>
           </div>
-          <div class="row">
-            <div class="col-3" id="openweather-api">
-              <h2 class="display-4 text-center">OpenWeather API</h2>
-            </div>
-            <div class="col-3" id="maps-api">
-              <h2 class="display-4 text-center">Maps API</h2>
-              <iframe id="maps-iframe" width="500" height="400" style="border:10" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/search?q=campsite&key=AIzaSyAdjP3RyKMzcagNwl7pXD76vnw9KXjmTc0"></iframe>
-            </div>
-            <div class="col-6" id="movies-api">
-              <h2 class="display-4 text-center">Movies API</h2>
-            </div>
-          </div>
-        </section>
-        
-    </main>
+        </div>
+      </div>
+    </section>
 
-    <script src="./assets/js/index.js"></script>
+  </main>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
