Added dynamic bootstrap buttons and click events

--- a/index.html
+++ b/index.html
@@ -67,12 +67,8 @@
         </div>
         <div class="col-12" id="movies-api">
           <h2 class="display-4 text-center">Movies API</h2>
-          <div class="btn-group">
-            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">Movie Genres</button>
-            <div class="dropdown-menu">
-              <a href="dropdown-item" href="#">Test</a>
-            </div>
+          <div class="container" id="movie-elements">
+            <p></p>
           </div>
         </div>
       </div>
