Added html divs and button stlying for dynamic buttons

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <div class="col-12" id="movies-api">
           <h2 class="display-4 text-center">Movies API</h2>
           <div class="container" id="movie-elements">
-            <p></p>
+            <div class="movie-genres"></div>
+            <div class="movie-cards"></div>
           </div>
         </div>
       </div>
