--- a/index.html
+++ b/index.html
@@ -74,13 +74,28 @@
         
     </main>
     
-    <footer>
+    <footer class="page-container">
+
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col-sm-12 col-md-6">
+            <h5>About</h5>
+            <p class="text-justify">Weekend Funtimes is a solution-focused company, addressing the challenges of event planning. Our platform incorporates weather, movie, and map APIs to provide a seamless experience for weekend events. The weather API informs the event theme, either outdoor camping for good weather or movie binge-watching for bad weather. The movie API offers movie selection with user-defined ratings filters and the map API selects the ideal camping location based on user preferences. Our goal is to simplify event planning and ensure an enjoyable weekend for all.</p>
+
+          </div>
+
+        </div>
+
+      </div>
       <div class="row">
         <div class="col-lg-12">
           <br>
           <p>copyright © 2023 Weekends Funtimes | All Rights Reserved. </p>
         </div>
       </div>
+
     </footer>
 
     <script src="./assets/js/index.js"></script>
