added Get in touch div

--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
               <li><a href="#my-wk1" target="_blank">Search APIs</a></li>
               <li><a href="#ct-section1" target="_blank">Contact</a></li>
             </ul>
+          </div>
 
-
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <h6>Get in Touch</h6>
           </div>
 
         </div>
@@ -104,7 +106,7 @@
       <!-- the <hr> element is a line and represents a break or a transition to another topic within a section. -->
 
       <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-12 col-md-12 col-lg-12">
           <br>
           <p>copyright © 2023 Weekends Funtimes | All Rights Reserved. </p>
         </div>
