added about to the navbar

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
               <a class="nav-link" href="#disp-4">Welcome</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#abt-section1">About</a>
+            </li>
+            <li class="nav-item">
                <a class="nav-link" href="#my-wk1">Search APIs</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="#abt-section1">About</a>
-            </li> -->
+            
             <li class="nav-item">
               <a class="nav-link" href="#ct-section1">Contact</a>
           </ul>
