edited Search Api to weather and camping

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
               <a class="nav-link" href="#abt-section1">About</a>
             </li>
             <li class="nav-item">
-               <a class="nav-link" href="#my-wk1">Search APIs</a>
+               <a class="nav-link" href="#my-wk1">Weather & Camping</a>
             </li>
-            
+            <li class="nav-item">
+              <a class="nav-link" href="#my-wk1"></a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#ct-section1">Contact</a>
           </ul>
