updated about section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
           <p class="lead">The fabulous choice for all outdoor camping & indoor movie themed weekend events planning.</p>
           <!-- <a class="btn btn-primary btn-lg" role="button" data-toggle="modal" data-target="#exampleModal">Hire Me</a>     -->
         </section>
+        <section id="about-container" class="container-fluid">
+          <div class="col-sm-12 col-md-12 col-lg-12">
+            <h6>About</h6>
+            <p class="text-justify">Weekend Funtimes is a solution-focused company, addressing the challenges of event planning. Our platform incorporates weather, movie, and map APIs to provide a seamless experience for weekend events. The weather API informs the event theme, either outdoor camping for good weather or movie binge-watching for bad weather. The movie API offers movie selection with user-defined ratings filters and the map API selects the ideal camping location based on user preferences. Our goal is to simplify event planning and ensure an enjoyable weekend for all.</p>
+          </div>
 
         <section id="api-container" class="container-fluid">
           <div class="row d-flex justify-content-center">
@@ -83,11 +88,7 @@
 
         <div class="row">
  
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <h6>About</h6>
-            <p class="text-justify">Weekend Funtimes is a solution-focused company, addressing the challenges of event planning. Our platform incorporates weather, movie, and map APIs to provide a seamless experience for weekend events. The weather API informs the event theme, either outdoor camping for good weather or movie binge-watching for bad weather. The movie API offers movie selection with user-defined ratings filters and the map API selects the ideal camping location based on user preferences. Our goal is to simplify event planning and ensure an enjoyable weekend for all.</p>
-          </div>
-
+          
           <div class="col-sm-12 col-md-6 col-lg-4">
             <h6>Quick Links</h6>
             <ul class="footer-links">
