--- a/index.html
+++ b/index.html
@@ -81,20 +81,6 @@
         <div class="row">
  
           <div class="col-sm-12 col-md-6 col-lg-4">
-            <h6>About</h6>
-            <p class="text-justify">Weekend Funtimes is a solution-focused company, addressing the challenges of event planning. Our platform incorporates weather, movie, and map APIs to provide a seamless experience for weekend events. The weather API informs the event theme, either outdoor camping for good weather or movie binge-watching for bad weather. The movie API offers movie selection with user-defined ratings filters and the map API selects the ideal camping location based on user preferences. Our goal is to simplify event planning and ensure an enjoyable weekend for all.</p>
-          </div>
-
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <h6>Quick Links</h6>
-            <ul class="footer-links">
-              <li><a href="#disp-4" target="_blank">Welcome</a></li>
-              <li><a href="#my-wk1" target="_blank">Search APIs</a></li>
-              <li><a href="#ct-section1" target="_blank">Contact</a></li>
-            </ul>
-          </div>
-
-          <div class="col-sm-12 col-md-6 col-lg-4">
             <h6>Get in Touch</h6>
           </div>
 
@@ -106,9 +92,20 @@
       <!-- the <hr> element is a line and represents a break or a transition to another topic within a section. -->
 
       <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12">
+        <div class="col-sm-12 col-md-6 col-lg-8">
           <br>
-          <p>copyright © 2023 Weekends Funtimes | All Rights Reserved. </p>
+          <p class="copyright-text">copyright © 2023 Weekend Funtimes | All Rights Reserved. </p>
+        </div>
+
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <ul class="social_media-icons">
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+
+          </ul>
+
+
         </div>
       </div>
 
