added movies tab to navbar and updated link to about section

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
               <a class="nav-link" href="#disp-4">Welcome</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#abt-section">About</a>
+              <a class="nav-link" href="#about-container">About</a>
             </li>
             <li class="nav-item">
                <a class="nav-link" href="#weather">Weather & Camping</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#my-wk1"></a>
+              <a class="nav-link" href="#movies1">Movies</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#ct-section1">Contact</a>
