added links to weather and movies api sections

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
               <a class="nav-link" href="#about-container">About</a>
             </li>
             <li class="nav-item">
-               <a class="nav-link" href="#weather">Weather & Camping</a>
+               <a class="nav-link" href="#openweather-api">Weather & Camping</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#movies1">Movies</a>
+              <a class="nav-link" href="#movies-api">Movies</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#ct-section1">Contact</a>
