--- a/index.html
+++ b/index.html
@@ -99,10 +99,9 @@
 
         <div class="col-sm-12 col-md-6 col-lg-4">
           <ul class="social_media-icons">
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-
+            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a class="github" href="#"><i class="fa fa-github"></i></a></li>
+            <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
           </ul>
 
 
