--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <h2>About</h2>
             <p class="text-justify">Weekend Funtimes is a solution-focused company, addressing the challenges of event planning. Our platform incorporates weather, movie and map APIs to provide a seamless experience for weekend events. The weather API informs the event theme, either outdoor camping for good weather or movie binge-watching for bad weather. The movie API offers movie selection with user-defined ratings filters and the map API selects the ideal camping location based on user preferences. Our goal is to simplify event planning and ensure an enjoyable weekend for all.</p>
           </div>
-
+        </section>
         <section id="api-container" class="container-fluid">
-          <div class="row d-flex justify-content-center">
+          <div class="row d-flex justify-content-center my-form">
             <div class="col-3">
               <form>
                 <div class="form-group">
