--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 
 <body>
@@ -99,9 +100,10 @@
 
         <div class="col-sm-12 col-md-6 col-lg-4">
           <ul class="social_media-icons">
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="github" href="#"><i class="fa fa-github"></i></a></li>
-            <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+            <li><a class="facebook" href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a class="github" href="#"><i class="fa-brands fa-github"></i></a></li>
+            <li><a class="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a class="linkedin" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
           </ul>
 
 
