css style update

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         
     </main>
     
-    <footer class="footer-container">
+    <footer class="footer">
 
       <section class="container">
 
