--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
 
         <div class="col-sm-12 col-md-6 col-lg-4">
           <ul class="social_media-icons">
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="github" href="#"><i class="fa fa-github"></i></a></li>
-            <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+            <li><a class="facebook" href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a class="github" href="#"><i class="fa-brands fa-github"></i></a></li>
+            <li><a class="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a class="linkedin" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
           </ul>
 
 
