modified footer heigh style

--- a/index.html
+++ b/index.html
@@ -93,9 +93,7 @@
   </main>
 
   <footer class="footer-container">
-
     <section class="container">
-
       <div class="row">
 
         <div class="col-sm-12 col-md-6 col-lg-4">
@@ -104,14 +102,13 @@
 
       </div>
 
-      </div>
+    </section>
 
       <hr>
       <!-- the <hr> element is a line and represents a break or a transition to another topic within a section. -->
 
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-8">
-          <br>
           <p class="copyright-text">copyright © 2023 Weekend Funtimes | All Rights Reserved. </p>
         </div>
 
@@ -122,8 +119,6 @@
             <li><a class="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li>
             <li><a class="linkedin" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
           </ul>
-
-
         </div>
       </div>
 
