--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Weekend Funtimes</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
 </head>
@@ -92,7 +92,7 @@
 
   </main>
 
-  <footer class="footer-container">
+  <footer class="footer">
     <section class="container">
       <div class="row">
 
