hr element resized

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     </section>
 
-      <hr>
+      <hr class="hr">
       <!-- the <hr> element is a line and represents a break or a transition to another topic within a section. -->
 
       <div class="row">
