--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
       </div>
       <div class="row">
         <div class="col-3" id="openweather-api">
-          <h2 class="display-4 text-center">OpenWeather API</h2>
+          <h2 class="display-4 text-center">Weather Forecast</h2>
         </div>
         <div class="col-3" id="maps-api">
-          <h2 class="display-4 text-center">Maps API</h2>
+          <h2 class="display-4 text-center">Nearby Campsites</h2>
           <iframe id="maps-iframe" width="500" height="400" style="border:10" loading="lazy" allowfullscreen
             src="https://www.google.com/maps/embed/v1/search?q=campsite&key=AIzaSyAdjP3RyKMzcagNwl7pXD76vnw9KXjmTc0"></iframe>
         </div>
         <div class="col-12" id="movies-api">
-          <h2 class="display-4 text-center">Movies API</h2>
+          <h2 class="display-4 text-center">The Movie Database</h2>
           <div class="container" id="movie-elements">
             <div class="movie-genres"></div>
             <div class="movie-cards"></div>
