--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
           </form>
         </div>
       </div>
-      <div class="row">
-        <div class="col-3" id="openweather-api">
-          <h2 class="display-4 text-center">Weather Forecast</h2>
+      <div class="row mt-4">
+        <div class="col-6 text-center" id="openweather-api">
+          <h2 class="display-4">Weather Forecast</h2>
         </div>
-        <div class="col-3" id="maps-api">
-          <h2 class="display-4 text-center">Nearby Campsites</h2>
+        <div class="col-6 text-center" id="maps-api">
+          <h2 class="display-4">Nearby Campsites</h2>
           <iframe id="maps-iframe" width="500" height="400" style="border:10" loading="lazy" allowfullscreen
             src="https://www.google.com/maps/embed/v1/search?q=campsite&key=AIzaSyAdjP3RyKMzcagNwl7pXD76vnw9KXjmTc0"></iframe>
         </div>
