Added new row div to api container to display the movies on its own row

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
           <iframe id="maps-iframe" width="500" height="400" style="border:10" loading="lazy" allowfullscreen
             src="https://www.google.com/maps/embed/v1/search?q=campsite&key=AIzaSyAdjP3RyKMzcagNwl7pXD76vnw9KXjmTc0"></iframe>
         </div>
+      </div>
+      <div class="row mt-4">
         <div class="col-12" id="movies-api">
           <h2 class="display-4 text-center">The Movie Database</h2>
           <div class="container" id="movie-elements">
