add button to get in touch section

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-  <form action="https://forsubmit.co/ajax/our.weekendfuntimes@gmail.com" method="post"></form>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">  
 </head>
 
 <body>
@@ -95,15 +94,19 @@
 
   <footer class="footer">
     <section class="container">
+      
       <div class="row">
         <div class="col-sm-1 col-md-1 col-lg-1">
           <h3>Get in Touch</h3>
-        <label for="name">Name</label>
-        <input type="name" name="name" id="name" required>
-        <label for="email">E-mail</label>
-        <input type="email" name="email" id="email" required>
-        <label for="message">Message:</label>
-        <input name="message" id="message" required>
+          <form class="form" action="https://forsubmit.co/ajax/our.weekendfuntimes@gmail.com" method="post">
+            <label for="name">Name</label>
+            <input type="name" name="name" id="name" required>
+            <label for="email">E-mail</label>
+            <input type="email" name="email" id="email" required>
+            <label for="message">Message:</label>
+            <input name="message" id="message" required>
+            <button type="submit">Send</button>
+          </form>  
     </section>
 
       <hr class="hr">
