added classes to p and h2 elements in about section in html file

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     </section>
     <section id="about-container" class="abt">
       <div class="col-sm-12 col-md-12 col-lg-12">
-        <h2>About</h2>
-        <p class="text-justify">Weekend Funtimes is a solution-focused company, addressing the challenges of event
+        <h2 class="display-4 abt3">About</h2>
+        <p class="text-justify wkfun">Weekend Funtimes is a solution-focused company, addressing the challenges of event
           planning. Our platform incorporates weather, movie and map APIs to provide a seamless experience for weekend
           events. The weather API informs the event theme, either outdoor camping for good weather or movie
           binge-watching for bad weather. The movie API offers movie selection with user-defined ratings filters and the
