added transition and updated hover color and added link to contact section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="#movies-api">Movies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#ct-section1">Contact</a>
+            <a class="nav-link" href="#cont-form">Contact</a>
         </ul>
       </div>
     </nav>
