added mobile download icons to images folder and html file

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
           <div class="col-sm-12 col-md-12 col-lg-12 text-center">
               <h2 class="section-heading abt4">Discover what all the buzz is about!</h2>
               <p class="wkfun1">Our app is also available on any mobile device! Download now to get started!</p>
-              
+              <div class="badges">
+                <a class="badge-link" href="#"><img src="/assets/images/google-play-badge.png" alt=""></a>
+                <a class="badge-link" href="#"><img src="/assets/images/app-store-badge.png" alt=""></a>
+              </div>
           </div>
         </div>
       </div>
