added styling to download section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           and ensure an enjoyable weekend for all.</p>
            <!-- Download Section -->
  
-          <div class="col-sm-12 col-md-12 col-lg-12 text-center">
+          <div class="col-sm-12 col-md-12 col-lg-12 text-center download">
               <h2 class="section-heading abt4">Discover what all the buzz is about!</h2>
               <p class="wkfun1">Our app is also available on any mobile device! Download now to get started!</p>
               <div class="badges">
