added animation link to html file and animation class to h1 tag in jumbotron

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Weekend Funtimes</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
@@ -43,7 +44,7 @@
 
   <main>
     <section class="jumbotron  text-center">
-      <h1 class="display-4" id="disp-4">Welcome to Weekend Funtimes!</h1>
+      <h1 class="display-4 animate__animated animate__fadeInDown" id="disp-4">Welcome to Weekend Funtimes!</h1>
 
       <p class="lead">The fabulous choice for all outdoor camping & indoor movie themed weekend events planning.</p>
 
