--- a/index.html
+++ b/index.html
@@ -113,14 +113,16 @@
       <div class="row">
         <div class="col-sm-1 col-md-1 col-lg-1" id="cont-form">
           <h3 id="form-title">Get in Touch</h3>
-          <form class="form" action="https://forsubmit.co/ajax/our.weekendfuntimes@gmail.com" method="post">
+          <form class="form" action="" method="post" data-form>
+          
+
             <label class="form-label" for="name">Name</label>
             <input class="form-input" type="name" name="name" id="name" required>
             <label class="form-label" for="email">E-mail</label>
             <input class="form-input" type="email" name="email" id="email" required>
             <label class="form-label" for="message">Message:</label>
             <textarea class="form-textarea" name="message" id="message" required></textarea>
-            <button class="form-btn" type="submit">Send</button>
+            <button class="form-btn" type="submit" data-fbtn>Send</button>
           </form>
         </div>
       </div>
