added image container to html and styled images in css

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
       <h1 class="display-4 animate__animated animate__fadeInDown" id="disp-4">Welcome to Weekend Funtimes!</h1>
 
       <p class="lead">The fabulous choice for all outdoor camping & indoor movie themed weekend events planning.</p>
-
+      <!-- add images -->
+      <div class="images-container">
+      <img src="./assets/images/camping1.gif" class="image animate__animated animate__fadeIn">
+      <img src="./assets/images/camping2.gif" class="image animate__animated animate__fadeIn">
+      <img src="/assets/images/camping3.gif" class="image animate__animated animate__fadeIn">
+      </div>
     </section>
     <section id="about-container" class="abt">
       <div class="col-sm-12 col-md-12 col-lg-12">
