updated wordings and links in about section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="images-container">
       <img src="./assets/images/camping1.gif" class="image animate__animated animate__fadeIn">
       <img src="./assets/images/camping2.gif" class="image animate__animated animate__fadeIn">
-      <img src="/assets/images/camping3.gif" class="image animate__animated animate__fadeIn">
+      <img src="./assets/images/camping3.gif" class="image animate__animated animate__fadeIn">
       </div>
     </section>
     <section id="about-container" class="abt">
