--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
               </form>
             </div>
           </div>
+          <div class="container d-flex justify-content-center" id="weather-info"></div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 text-center" id="maps-api">
           <h2 class="display-4">Nearby Campsites</h2>
