form updated and bugs fixed

--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
   <footer class="footer">
     <section class="container">
 
+      <!-- Get in touch with us form  -->
       <div class="row">
         <div class="col-sm-1 col-md-1 col-lg-1" id="cont-form">
           <h3 id="form-title">Get in Touch</h3>
-          <form class="form" action="" method="post" data-form>
-          
-
+          <form class="form" action="https://formsubmit.co/our.weekendfuntimes@gmail.com" method="POST" data-form>
+           
             <label class="form-label" for="name">Name</label>
             <input class="form-input" type="name" name="name" id="name" required>
             <label class="form-label" for="email">E-mail</label>
             <input class="form-input" type="email" name="email" id="email" required>
             <label class="form-label" for="message">Message:</label>
             <textarea class="form-textarea" name="message" id="message" required></textarea>
-            <button class="form-btn" type="submit" data-fbtn>Send</button>
+            <button class="formBtn" type="submit" data-fbtn>Send</button>
           </form>
         </div>
       </div>
@@ -140,7 +140,7 @@
         <div class="col-sm-12 col-md-6 col-lg-4">
           <ul class="social_media-icons">
             <li><a class="facebook" href="#"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a class="github" href="#"><i class="fa-brands fa-github"></i></a></li>
+            <li><a class="github" href="https://github.com/abuttle2/weekend-funtimes" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             <li><a class="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li>
             <li><a class="linkedin" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
           </ul>
