--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <div class="row">
         <div class="col-sm-1 col-md-1 col-lg-1" id="cont-form">
           <h3 id="form-title">Get in Touch</h3>
-          <form class="form" action="https://formsubmit.co/our.weekendfuntimes@gmail.com" method="POST" data-form>
+          <form class="form" action="https://formsubmit.co/ajax/199c2ccd71ba3c110491bf2cbccdb492" method="POST" data-form target="_blank">
            
             <label class="form-label" for="name">Name</label>
             <input class="form-input" type="name" name="name" id="name" required>
