Form justify-contente-center

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </main>
 
   <footer class="footer">
-    <section class="container">
+    <section class="container d-flex justify-content-center">
 
       <!-- Get in touch with us form  -->
       <div class="row">
