--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                  <h2 class="modal-title">Welcome!</h2>
+                  <h2 class="modal-title">Hi there!</h2>
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <!-- Modal body -->
